--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,98 @@
  *= require_self
  *= require_tree .
  */
+html, body{
+  	height:90%;
+  	font-family: 'Open Sans', sans-serif;
+  	background-color: #4E3229;
+  	color:red;
+  }
+  /** {
+  	border:2px solid black;
+  }*/
+
+a {
+	color:#fff;
+} 
+a:link {
+	color:#fff;
+}
+
+ #app_name{
+ 	text-align: center;
+ 	margin-top:0;
+ 	color:#fff;
+	position:absolute;
+	left:0;
+	top:0;
+	width:95%;
+ }
+
+ .nav{
+    list-style:none;
+    margin:0;
+    margin-bottom:5px;
+    padding:0;
+    text-align:center;
+    position:absolute;
+    bottom:0;
+    width:95%;
+}
+.nav li{
+    display:inline;
+}
+.nav a{
+    display:inline;
+    padding:15px 15px 5px 15px;
+    background-color:red;
+    color:#fff;
+    text-decoration: none;
+    opacity:.6;
+}
+
+#contacts {
+	position:fixed;
+	top:90px;
+	height:70%;
+	overflow-y:auto;
+	width:80%;
+	text-align: center;
+}
+
+#contacts li {
+	list-style-type: none;
+}
+
+#contacts h1{
+	margin-top:50px;
+	padding:0;
+	text-align: center;
+	position:fixed;
+	left:0;
+	top:0;
+	width:100%;
+	/*background-color:#fff*/;
+	}
+
+.hidden{
+	display:none;
+}
+
+
+.meets {
+	position:fixed;
+	top:90px;
+	height:70%;
+	overflow-y:scroll;
+	width:80%;
+	text-align: center;
+}
+
+#invites{
+	position:fixed;
+	top:90px;
+	height:70%;
+	overflow-y:scroll;
+	width:80%;
+	text-align: center;
+}
