committing so I can pull new seed data from database without conflicts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -106,3 +106,12 @@ a:link {
 	width:80%;
 	text-align: center;
 }
+
+#profile {
+	position:fixed;
+	top:90px;
+	height:70%;
+	overflow-y:auto;
+	width:80%;
+	text-align: center;
+}
