--- a/app/views/meets/index.html.erb
+++ b/app/views/meets/index.html.erb
@@ -53,11 +53,19 @@
 </div>
 <br>
 
+<div id="profile" class="hidden">
+<h1>Your PowWow Account</h1>
+<label>Username: </label><%= @user.username %><br>
+<label>Your Name: </label><%= @user.name %><br>
+<label>Your Email: </label><%= @user.email %><br>
+<label>Your Phone: </label><%= @user.phone %><br>
 <%=link_to "Sign out", destroy_user_session_path, method: "delete" %>
+</div>
 
 
 <div>
 <ul class="nav">
+<li><a id="pbtn" href="#">Profile</a></li>
 <li><a id="ibtn" href="#">Invites</a></li>
 <li><a id="ebtn" href="#">Events</a></li>
 <li><a id="cbtn" href="#">Contacts</a></li>
