added maps to show pages of invites and meets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,18 @@
 <html>
 <head>
   <title>Project2</title>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvHawiMNKSViHecR02Ns3b0aBjqNSzNvk&sensor=false"></script>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 </head>
 <body>
 
-<%= yield %>
 <p class="notice"> <%=notice %> </p>
 <p class="alert"> <%=alert %> </p>
+
+<%= yield %>
 
 </body>
 </html>
