--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,11 @@
  *= require_self
  *= require_tree .
  */
+
+html { height: 100% }
+body { height: 100%; margin: 90px; padding: 0 }
+#map-canvas { height: 200px; width: 200px }
+
 html, body{
   	height:90%;
   	font-family: 'Open Sans', sans-serif;
