--- a/app/views/invites/show.html.erb
+++ b/app/views/invites/show.html.erb
@@ -1,4 +1,3 @@
-
 <h1>Pending Invite</h1>
 
 <ul class="nav nav-pills">
@@ -11,9 +10,12 @@
   <div class="col-md-3">
     <p class="lead"><%= @invite.time.strftime("%l:%M %p") %></p>
     <p class="text-info"><%= @invite.date.strftime("%a, %b %e") %></p>
-    <p class="text-info"><%= @invite.address %></p>
   </div>
 </div>
+
+<p><%= @invite.address %></p>
+
+<div id="map-canvas"/></div>
 
 <div class="row">
   <div class="col-md-3">
@@ -23,3 +25,26 @@
     <% end %>
   </div>
 </div>
+
+<script type="text/javascript">
+
+function initialize_map() {
+
+  var latlng = new google.maps.LatLng(<%= @invite.lat %>, <%= @invite.lng %>);
+  var mapOptions = {
+    zoom: 16,
+    center: latlng,
+    mapTypeControl: false
+  }
+
+  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+  var marker = new google.maps.Marker({
+    map: map,
+    position: latlng
+  });
+
+};
+
+$(document).on('ready page:load', initialize_map);
+
+</script>
