--- a/app/views/invites/new.html.erb
+++ b/app/views/invites/new.html.erb
@@ -1,19 +1,28 @@
 <h1> New Invite </h1>
 
-<%= form_for @invite do |f| %>
-  <%= f.label :user_id %>
-  <%= f.text_field :user_id %>
+
+  <% @invite_contact.each do |a| %>
+     <%= User.find_by_id(a).name %>
+  <% end %>
+<br>
+
+<%= form_for @invite, url: invites_path(@invite, :users => @invite_contact) do |f| %>
+  <%= f.label :date %>
+  <%= f.date_field :date %>
   <br>
   <%= f.label :address %>
   <%= f.text_field :address %>
   <br>
   <%= f.label :time %>
-  <%= f.text_field :time %>
+  <%= f.time_field :time %>
   <br>
+
   <br>
 
   <%= f.submit class: "btn btn-primary" %>
 <% end %>
+
+
 
 
 
