--- a/app/views/meets/index.html.erb
+++ b/app/views/meets/index.html.erb
@@ -38,7 +38,7 @@
 </div>
 
 <div class="meets">
-<%=link_to "New Meet", new_invite_path %>
+<%=link_to "New Meet", "/contacts" %>
 <h1> Your Scheduled Meet-Ups </h1>
 
 <% @meets.each do |meet| %>
