--- a/app/views/invites/contacts.html.erb
+++ b/app/views/invites/contacts.html.erb
@@ -1,15 +1,20 @@
 <h1> Your Contacts </h1>
 
-<%= form_for @invite, url: select_contacts_path do |x| %> 
-  <% current_user.users.each do |a| %>
-    <%= check_box("contacts", "add", { :multiple => true}, a.id, nil) %>
-    <%= label_tag a.name %><br>
-<% end %> 
+<% if current_user.users.empty? %>
 
+  <p>You have no contacts. Please add contacts to send invites.</p>
 
+<% else %>
 
+  <%= form_for @invite, url: select_contacts_path do |x| %> 
+    <% current_user.users.each do |a| %>
+      <%= check_box("contacts", "add", { :multiple => true}, a.id, nil) %>
+      <%= label_tag a.name %><br>
+  <% end %> 
 
-<%= x.submit class: 'btn btn-primary'%>
+  <%= x.submit class: 'btn btn-primary'%>
+  <% end %>
+
 <% end %>
 
 <br>
