--- a/app/views/meets/index.html.erb
+++ b/app/views/meets/index.html.erb
@@ -7,6 +7,8 @@
 
 <div id="contacts" class="hidden">
 	<h1>contacts </h1>
+
+	<button><a href="/addcontact">Add contact</a></button>
 	<ul>
 		<% @contacts.each do |contact| %>
 			<div> 
