added ability to add contact by searching by username, and validated that usernames are unique

--- a/app/views/meets/index.html.erb
+++ b/app/views/meets/index.html.erb
@@ -8,7 +8,7 @@
 <div id="contacts" class="hidden">
 	<h1>contacts </h1>
 
-	<button><a href="/addcontact">Add contact</a></button>
+	<button><a href="/newcontact">Add contact</a></button>
 	<ul>
 		<% @contacts.each do |contact| %>
 			<div> 
