--- a/app/views/meets/index.html.erb
+++ b/app/views/meets/index.html.erb
@@ -8,7 +8,10 @@
 <div id="contacts" class="hidden">
 	<h1>contacts </h1>
 
-	<button><a href="/addcontact">Add contact</a></button>
+
+<div id="contact">
+</div>
+	<!-- <button><a href="/addcontact">Add contact</a></button>
 	<ul>
 		<% @contacts.each do |contact| %>
 			<div> 
@@ -18,8 +21,10 @@
 				</a>
 			</div>
 		<%end%> 
-	</ul>
+	</ul> -->
 </div>
+
+
 
 
 
