added display of incoming and outgoing invites, fixed bugs in invites create method and jquery

--- a/app/views/meets/index.html.erb
+++ b/app/views/meets/index.html.erb
@@ -21,21 +21,26 @@
 	</ul>
 </div>
 
-
 <div class="hidden" id="invites">
 	<a id="inc" href="#">incoming</a>
 	<a id="out" href="#">outgoing</a>
 	<div id="incoming">
-	<%@incoming.each do |msg| %>
-	<li> <%=msg.address%></li>
-	<li> <%=msg.time%></li>
-	<%end%>
+		<ul>
+			<% @incoming.each do |msg| %>
+				<li> <%= msg.address%></li>
+				<li> <%= msg.time.strftime("%l:%M %p") %></li>
+				<li> <%= msg.date.strftime("%a, %b %e") %></li>
+			<%end%>
+		</ul>
 	</div>
 	<div class="hidden" id="outgoing">
-	<%@outgoing.each do |msg| %>
-	<li> <%msg.address %></li>
-	<li> <%msg.time %></li>
-	<%end%>
+		<ul>
+			<% @outgoing.each do |msg| %>
+				<li> <%= msg.address %></li>
+				<li> <%= msg.time.strftime("%l:%M %p") %></li>
+				<li> <%= msg.date.strftime("%a, %b %e") %></li>
+			<%end%>
+		</ul>
 	</div>
 </div>
 
@@ -47,7 +52,7 @@
      <div>
 	     <a href="#">
 		      <p ><%= meet.address %></p>
-		      <p ><%= meet.time %></p>
+		      <p ><%= meet.time.strftime("%l:%M %p") %></p>
 		      <p ><%= meet.users.first %></p>
 	      </a>
     </div>
