--- a/app/assets/javascripts/templates/contacts.hbs
+++ b/app/assets/javascripts/templates/contacts.hbs
@@ -1,4 +1,4 @@
-<div data-id="{{id}}" >
-            <div>{{name}}</div>
-            <div>{{email}}</div>
+<div class="ind" data-id="{{id}}">
+            <p>{{name}}</p>
+            <p>{{email}}</p>
 </div>
