--- a/app/views/meets/index.html.erb
+++ b/app/views/meets/index.html.erb
@@ -6,22 +6,11 @@
 
 
 <div id="contacts" class="hidden">
-	<h1>contacts </h1>
-
+<h1>contacts </h1> <button><a href="/addcontact">Add contact</a></button>
 
 <div id="contact">
 </div>
-	<!-- <button><a href="/addcontact">Add contact</a></button>
-	<ul>
-		<% @contacts.each do |contact| %>
-			<div> 
-				<a href="#">
-					<p> <%=contact.name %> </p>
-					<p> <%=contact.email %></p>
-				</a>
-			</div>
-		<%end%> 
-	</ul> -->
+	
 </div>
 
 
