converting invites to meets

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 html, body{
   	height:90%;
   	font-family: 'Open Sans', sans-serif;
-  	background-color: #4E3229;
+  	background-color: #D5D5DE;
   	color:red;
   }
   /** {
