--- a/app/views/meets/index.html.erb
+++ b/app/views/meets/index.html.erb
@@ -26,19 +26,20 @@
 	<a id="out" href="#">outgoing</a>
 	<div id="incoming">
 		<ul>
-			<% @incoming.each do |msg| %>
-				<li> <%= msg.address%></li>
-				<li> <%= msg.time.strftime("%l:%M %p") %></li>
-				<li> <%= msg.date.strftime("%a, %b %e") %></li>
+			<% @incoming.each do |inv| %>
+				<li> <%= inv.address %></li>
+				<li> <%= inv.time.strftime("%l:%M %p") %></li>
+				<li> <%= inv.date.strftime("%a, %b %e") %></li>
+				<a href="/invites/<%= inv.id %>/confirm"><button>Confirm</button></a>
 			<%end%>
 		</ul>
 	</div>
 	<div class="hidden" id="outgoing">
 		<ul>
-			<% @outgoing.each do |msg| %>
-				<li> <%= msg.address %></li>
-				<li> <%= msg.time.strftime("%l:%M %p") %></li>
-				<li> <%= msg.date.strftime("%a, %b %e") %></li>
+			<% @outgoing.each do |inv| %>
+				<li> <%= inv.address %></li>
+				<li> <%= inv.time.strftime("%l:%M %p") %></li>
+				<li> <%= inv.date.strftime("%a, %b %e") %></li>
 			<%end%>
 		</ul>
 	</div>
@@ -49,13 +50,15 @@
 <h1> Your Scheduled Meet-Ups </h1>
 
 <% @meets.each do |meet| %>
-     <div>
-	     <a href="#">
-		      <p ><%= meet.address %></p>
-		      <p ><%= meet.time.strftime("%l:%M %p") %></p>
-		      <p ><%= meet.users.first %></p>
-	      </a>
-    </div>
+     <a href="#">
+     	<div>  
+		      <p><%= meet.address %></p>
+		      <p><%= meet.time.strftime("%l:%M %p") %></p>
+		      <% meet.users.each do |user| %>
+		      	<p> <%= user.name unless user.id == current_user.id %> </p>
+		      <% end %>
+    	</div>
+    </a>
 <% end %>
 </div>
 <br>
