added missing } in stylesheet

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -117,6 +117,7 @@ a:link {
 	overflow-y:auto;
 	width:80%;
 	text-align: center;
+}
 
 button {
   background-color: Red;
@@ -126,4 +127,3 @@ button {
 ul {
   list-style: none;
 }
-
