--- a/app/assets/javascripts/templates/meets.hbs
+++ b/app/assets/javascripts/templates/meets.hbs
@@ -1,19 +1,8 @@
-<div class="meets">
-<%=link_to "New Meet", "/contacts" %>
-<h1> Your Scheduled Meet-Ups </h1>
 
-<% @meets.each do |meet| %>
-     
      	<div class="meet">  
-     	<a href="/meets/<%= meet.id %>">
-		      <p><%= meet.address %></p>
-		      <p><%= meet.time.strftime("%l:%M %p") %></p>
-		      <% meet.users.each do |user| %>
-		      	<p> <%= user.name unless user.id == current_user.id %> </p>
-		      <% end %>
+     	<a href="/meets/{{id}}">
+		      <p>{{address}}</p>
+		      <p>{{meet date format="DD/MM/YYYY"}}</p>
+		     	{{users}}
 		     </a>
     	</div>
-    
-<% end %>
-</div>
-<br>
