added times successfully to event page but we cannot use templates

--- a/app/assets/javascripts/templates/meets.hbs
+++ b/app/assets/javascripts/templates/meets.hbs
@@ -2,7 +2,10 @@
      	<div class="meet">  
      	<a href="/meets/{{id}}">
 		      <p>{{address}}</p>
-		      <p>{{meet date format="DD/MM/YYYY"}}</p>
-		     	{{users}}
+		      {{date}}
+		      {{time}}
+		     {{#each users}}
+   			  {{this.name}}<br>
+			{{/each}}
 		     </a>
     	</div>
