invites show up, but dont show and hide properly yet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 </head>
 <body>
 <%if user_signed_in? %>
-<element id="user_id" data-id="<%=current_user.id%>">
+<element id="user_id" data-id="<%=current_user.id%>"></element>
 <%end%>
 <h1 id="app_name">PowWow</h1>
 
