added sign out to profile

--- a/app/assets/javascripts/templates/uprofile.hbs
+++ b/app/assets/javascripts/templates/uprofile.hbs
@@ -5,4 +5,6 @@
 <label>Your Email: </label>{{email}}<br>
 <label>Your Phone: </label>{{phone}}<br>
 
+<a href="/users/sign_out"> Sign me out </a>
+
 </div>
