Added individual invite pages with dummy buttons for accept and cancel

--- a/app/assets/javascripts/templates/incinvites.hbs
+++ b/app/assets/javascripts/templates/incinvites.hbs
@@ -1,8 +1,9 @@
-	<div class="invite" data-id={{id}}>
+	<div class="inc_invite" data-id={{id}}>
 		<ul>
 				<li> {{address}}</li>
 				<li> {{time}}</li>
 				<li> {{date}}</li>
+
 		</ul>
 	</div>
 
