--- a/app/assets/javascripts/templates/outinvites.hbs
+++ b/app/assets/javascripts/templates/outinvites.hbs
@@ -1,7 +1,8 @@
-	<div>
+	<div class="out_invite" data-id={{id}}>
 		<ul>
 				<li> {{address}}</li>
 				<li> {{time}}</li>
 				<li> {{date}}</li>
+
 		</ul>
 	</div>
