added formatted time to every page and finished ajax for individual contacts, meets, and invites

--- a/app/assets/javascripts/templates/incinvite.hbs
+++ b/app/assets/javascripts/templates/incinvite.hbs
@@ -1,7 +1,8 @@
 <div class="s_inc_inv">
 {{address}}<br>
-{{time}}<br>
-{{date}}<br>
+{{showdate}}<br>
+{{showtime}}<br>
+
 
 
 <a href="#">confirm</a>
