--- a/app/assets/javascripts/templates/outinvites.hbs
+++ b/app/assets/javascripts/templates/outinvites.hbs
@@ -1,8 +1,9 @@
 	<div class="out_invite" data-id={{id}}>
 		<ul>
 				<li> {{address}}</li>
-				<li> {{time}}</li>
-				<li> {{date}}</li>
+				<li> {{showdate}}</li>
+				<li> {{showtime}}</li>
+				
 
 		</ul>
 	</div>
