--- a/app/assets/javascripts/templates/contact.hbs
+++ b/app/assets/javascripts/templates/contact.hbs
@@ -1,9 +1,7 @@
-<div>
+<div class="contact">
 <h1>About {{name}}</h1>
 <label>Username: </label>{{username}}<br>
 <label>Your Name: </label>{{name}}<br>
 <label>Your Email: </label>{{email}}<br>
 <label>Your Phone: </label>{{phone}}<br>
-<label>About You: </label><br>
-{{bio}}<br>
 </div>
