--- a/app/assets/javascripts/templates/outinvite.hbs
+++ b/app/assets/javascripts/templates/outinvite.hbs
@@ -1,7 +1,8 @@
 <div class="s_out_inv">
 {{address}}<br>
-{{time}}<br>
-{{date}}<br>
+{{showdate}}<br>
+{{showtime}}<br>
+
 
 
 <a href="#">cancel</a>
