--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -180,3 +180,11 @@ ul {
   margin-top: 50px;
 }
 
+.ind_meet {
+	position:fixed;
+	top:90px;
+	height:70%;
+	overflow-y:scroll;
+	width:80%;
+	text-align: center;
+}
