added confirm, decline, cancel buttons with working ajax and created checks so message display if events or invites are empty

--- a/app/assets/javascripts/templates/incinvite.hbs
+++ b/app/assets/javascripts/templates/incinvite.hbs
@@ -3,7 +3,10 @@
 {{showdate}}<br>
 {{showtime}}<br>
 
+<input class="conf_inv" data-id={{id}} type="submit" value="Confirm">
+<input class="decl_inv" data-id={{id}} type="submit" value="Decline">
+
+<input class="decl_inv" data-id={{id}} type="submit" value="Reschedule">
 
 
-<a href="#">confirm</a>
 </div>
