--- a/app/assets/javascripts/templates/meet.hbs
+++ b/app/assets/javascripts/templates/meet.hbs
@@ -4,4 +4,6 @@
 		     {{#each users}}
    			  {{this.name}}<br>
 			{{/each}}
+
+<input class="decl_meet" data-id={{id}} type="submit" value="Cancel">
     	</div>
