made send_text_message method in application helper, set up all instances of it, and started working on jquery and ajax for adding user bio

--- a/app/assets/javascripts/templates/uprofile.hbs
+++ b/app/assets/javascripts/templates/uprofile.hbs
@@ -3,8 +3,10 @@
 <label>Username: </label>{{username}}<br>
 <label>Your Name: </label>{{name}}<br>
 <label>Your Email: </label>{{email}}<br>
-<label>Your Phone: </label>{{phone}}<br>
+<label>Your Phone: </label>{{phone}}<br><br>
 
-<a href="/users/sign_out"> Sign me out </a>
+<button id="addbio">Add bio</button> <br><br>
+
+<a href="/users/sign_out"> Sign out </a>
 
 </div>
