finished functionality for adding a bio

--- a/app/assets/javascripts/templates/contact.hbs
+++ b/app/assets/javascripts/templates/contact.hbs
@@ -4,4 +4,5 @@
 <label>Your Name: </label>{{name}}<br>
 <label>Your Email: </label>{{email}}<br>
 <label>Your Phone: </label>{{phone}}<br>
+<label>Your Bio: </label>{{bio}}<br>
 </div>
