--- a/app/assets/javascripts/templates/uprofile.hbs
+++ b/app/assets/javascripts/templates/uprofile.hbs
@@ -4,6 +4,8 @@
 <label>Your Name: </label>{{name}}<br>
 <label>Your Email: </label>{{email}}<br>
 <label>Your Phone: </label>{{phone}}<br><br>
+<label>Bio: </label>{{bio}}<br><br>
+
 
 <button id="addbio">Add bio</button> <br><br>
 
