added working confirm button for contacts

--- a/app/assets/javascripts/templates/incpendingcontacts.hbs
+++ b/app/assets/javascripts/templates/incpendingcontacts.hbs
@@ -2,5 +2,5 @@
 	{{name}}<br>
 	{{email}}
 	<br>
-	<button> confirm</button>
+<input class="add_con" data-id={{id}} type="submit" value="Confirm">
 </div>
