added maps to invites and meets, but can only display one at a time

--- a/app/assets/javascripts/templates/incinvite.hbs
+++ b/app/assets/javascripts/templates/incinvite.hbs
@@ -3,10 +3,14 @@
 {{showdate}}<br>
 {{showtime}}<br>
 
+<br>
+<br>
+<div id="map-canvas"></div>
+
 <input class="conf_inv" data-id={{id}} type="submit" value="Confirm">
 <input class="decl_inv" data-id={{id}} type="submit" value="Decline">
 
-<input class="decl_inv" data-id={{id}} type="submit" value="Reschedule">
+<input class="upd_inv" data-id={{id}} type="submit" value="Reschedule">
 
 
 </div>
