--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 <p class="alert"> <%=alert %> </p>
 
 <%= yield %>
-
+<div id="map-canvas"></div>
 <div>
 <ul class="nav">
 <li><a id="pbtn" href="#">Profile</a></li>
