--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *= require_tree .
  */
 
-#map-canvas { height: 200px; width: 200px }
+#map-canvas { height: 200px; width: 200px; margin:auto; }
 
 html, body{
   	height:90%;
