--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Project2</title>
+  <link href='http://fonts.googleapis.com/css?family=Engagement' rel='stylesheet' type='text/css'>
  <script src="http://momentjs.com/downloads/moment.min.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvHawiMNKSViHecR02Ns3b0aBjqNSzNvk&sensor=false"></script>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
@@ -13,7 +14,7 @@
 <%if user_signed_in? %>
 <element id="user_id" data-id="<%=current_user.id%>"></element>
 <%end%>
-<h1 id="app_name">PowWow</h1>
+<h1 id="app_name">Powwow</h1>
 
 <p class="notice"> <%=notice %> </p>
 <p class="alert"> <%=alert %> </p>
