--- a/app/assets/javascripts/templates/incinvite.hbs
+++ b/app/assets/javascripts/templates/incinvite.hbs
@@ -5,7 +5,7 @@
 
 <br>
 <br>
-
+<div class="mapstyle" id="map-canvas-{{id}}"></div>
 
 <input class="conf_inv" data-id={{id}} type="submit" value="Confirm">
 <input class="decl_inv" data-id={{id}} type="submit" value="Decline">
