--- a/app/assets/javascripts/templates/meet.hbs
+++ b/app/assets/javascripts/templates/meet.hbs
@@ -5,5 +5,7 @@
    			  {{this.name}}<br>
 			{{/each}}
 
+
+<div class="mapstyle" id="map-canvas-{{id}}"></div>
 <input class="decl_meet" data-id={{id}} type="submit" value="Cancel">
     	</div>
