--- a/app/assets/javascripts/templates/outinvite.hbs
+++ b/app/assets/javascripts/templates/outinvite.hbs
@@ -6,7 +6,7 @@
 <br>
 <br>
 
-<div id="map-canvas-{{id}}"></div>
+<div class="mapstyle" id="map-canvas-{{id}}"></div>
 
 <input class="decl_inv" data-id={{id}} type="submit" value="Cancel">
 </div>
