updated invite show pages to have user's names

--- a/app/assets/javascripts/templates/incinvite.hbs
+++ b/app/assets/javascripts/templates/incinvite.hbs
@@ -2,7 +2,9 @@
 {{address}}<br>
 {{showdate}}<br>
 {{showtime}}<br>
-
+ {{#each users}}
+   			  {{this.name}}<br>
+			{{/each}}
 <br>
 <br>
 <div class="mapstyle" id="map-canvas-{{id}}"></div>
