organizing stylesheet and starting styling

--- a/app/assets/javascripts/templates/meets.hbs
+++ b/app/assets/javascripts/templates/meets.hbs
@@ -1,8 +1,8 @@
 
      	<div class="meet" data-id={{id}}>  
-		      <p class="address">{{address}}</p>
-		      {{showdate}} {{showtime}}<br>
+		     <span>{{address}}<br>
+		     {{showdate}} {{showtime}}<br>
 		     {{#each users}}
-   			  {{this.name}}<br>
-			{{/each}}
+   			 {{this.name}}<br>
+			{{/each}}</span>
     	</div>
