added styling and associated users to invite show pages

--- a/app/assets/javascripts/templates/uprofile.hbs
+++ b/app/assets/javascripts/templates/uprofile.hbs
@@ -1,4 +1,4 @@
-<div id="profile">
+<div id="profile" class="centered">
 <h1>Your PowWow Account</h1>
 <label>Username: </label>{{username}}<br>
 <label>Your Name: </label>{{name}}<br>
