--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,13 +48,28 @@ input[type="submit"] {
 html, body{
   	height:90%;
   	font-family: 'Varela Round', sans-serif;
-  	background-color: White;
-  	color:red;
+  	background-color: #fff;
+  	color:black;
   }
 
 body {
   margin-top: 100px;
 }
+
+button {
+  background-color:  #00059C;
+  border: none;
+}
+
+button a {
+	 color:#fff;
+}
+
+ul {
+  list-style: none;
+
+}
+
 
 /*---------------Map Styling--------------*/
 
@@ -62,7 +77,7 @@ body {
 	height: 200px; 
 	width: 200px; 
 	margin:auto;
-	position: fixed !important;
+	position: relative !important;
 	bottom:75px;
 	left:0px;
 	right:0px;
@@ -101,12 +116,14 @@ body {
 
 .centered {
 	position:fixed;
-	top:90px;
+	top:110px;
+	left:0px;
+	right:0px;
 	height:70%;
 	overflow-y:auto;
-	width:50%;
+	width:100%;
 	text-align: center;
-	margin:auto;
+	
 }
 
 
@@ -121,7 +138,7 @@ body {
     bottom:0;
     left:0;
     width:100%;
-    background-color: #000363;
+    background-color: #000;
     opacity:.9;
 }
 .nav li{
@@ -143,12 +160,12 @@ body {
 
 
 #contacts {
-	position:fixed;
+/*	position:fixed;
 	top:90px;
 	height:70%;
 	overflow-y:auto;
 	width:80%;
-	text-align: center;
+	text-align: center;*/
 }
 
 #contacts li {
@@ -170,7 +187,7 @@ body {
 
 
 
-
+/*----------Meets-------------*/
 
 .meets {
 	
@@ -182,77 +199,16 @@ div .meet :hover {
 }
 
 .meet {
-  background-color: White;
-  width: 400px;
+  background-color: #FFF;
+  min-width: 250px;
   margin: 20px auto;
-  border-radius: 5px;
+
 }
 
 .meet a {
   text-decoration: none;
 }
 
-
-#invites{
-	position:fixed;
-	top:90px;
-	height:70%;
-	overflow-y:auto;
-	width:80%;
-	text-align: center;
-}
-
-#profile {
-	position:fixed;
-	top:90px;
-	height:70%;
-	overflow-y:auto;
-	width:80%;
-	text-align: center;
-}
-
-button {
-  background-color: Red;
-  border: none;
-}
-
-ul {
-  list-style: none;
-
-}
-
-.ind {
-	height:100px;
-	width: 250px;
-}
-
-
-
-.inc_invite :hover{
-	background-color: blue;
-}
-
-.out_invite :hover{
-	background-color:yellow;
-}
-
-.s_inc_inv{
-	position:fixed;
-	top:90px;
-	height:70%;
-	overflow-y:auto;
-	width:80%;
-	text-align: center;
-}
-
-.s_out_inv{
-	position:fixed;
-	top:90px;
-	height:70%;
-	overflow-y:auto;
-	width:80%;
-	text-align: center;
-}
 
 #newmeetbtn {
   margin-top: 50px;
@@ -274,10 +230,70 @@ ul {
 #newmeet_link > button {
   width: 240px;
   height: 45px;
-  border-radius: 6px;
+  /*border-radius: 6px;*/
   margin-bottom: 10px;
-  margin-left: 9%;
   font-size: 20px;
   color: White;
   background-color: #00059C;
+  border: 3px solid white;
 }
+
+
+
+/*-----------Invites--------------*/
+
+#invites{
+	/*position:fixed;
+	top:90px;
+	height:70%;
+	overflow-y:auto;
+	width:80%;
+	text-align: center;*/
+}
+
+
+.inc_invite :hover{
+	background-color: blue;
+}
+
+.out_invite :hover{
+	background-color:yellow;
+}
+
+
+
+.s_inc_inv{
+	position:fixed;
+	top:90px;
+	height:70%;
+	overflow-y:auto;
+	width:80%;
+	text-align: center;
+}
+
+.s_out_inv{
+	position:fixed;
+	top:90px;
+	height:70%;
+	overflow-y:auto;
+	width:80%;
+	text-align: center;
+}
+
+
+/*-----------Profile--------------*/
+
+
+#profile {
+	/*position:fixed;
+	top:90px;
+	height:70%;
+	overflow-y:auto;
+	width:80%;
+	text-align: center;*/
+}
+
+
+
+
+
