--- a/app/assets/javascripts/templates/uprofile.hbs
+++ b/app/assets/javascripts/templates/uprofile.hbs
@@ -9,8 +9,10 @@
 
 <button id="addbio">Add bio</button> <br><br>
 
-<a href="/users/sign_out"> Sign out </a>
+
+<input class="signout" type="submit" value="Sign Out">
+<br>
+<br>
 
 </div>
 
-<!-- heroku test comment -->
