--- a/app/assets/javascripts/templates/meet.hbs
+++ b/app/assets/javascripts/templates/meet.hbs
@@ -1,4 +1,4 @@
-<div class="ind_meet" data-id={{id}}>  
+<div class="centered ind_meet" data-id={{id}}>  
 		      <p class="address">{{address}}</p>
 		      {{showdate}} {{showtime}}<br>
 		     {{#each users}}
