added more styling fixes and fixed invite and user bug

--- a/app/assets/javascripts/templates/contact.hbs
+++ b/app/assets/javascripts/templates/contact.hbs
@@ -1,4 +1,4 @@
-<div class="contact">
+<div class="centered contact">
 <h1>About {{name}}</h1>
 <label>Username: </label>{{username}}<br>
 <label>Your Name: </label>{{name}}<br>
