--- a/app/assets/javascripts/templates/uprofile.hbs
+++ b/app/assets/javascripts/templates/uprofile.hbs
@@ -1,5 +1,5 @@
 <div id="profile" class="centered">
-<h1>Your PowWow Account</h1>
+<h1>Your Powow Account</h1>
 <label>Username: </label>{{username}}<br>
 <label>Your Name: </label>{{name}}<br>
 <label>Your Email: </label>{{email}}<br>
