--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -119,12 +119,12 @@ hr { display: block; height: 0px; border:0; border-top: 2px solid #19B5FE;
 	top:0;
 	width:95%;
   /*font-family: 'Varela Round', sans-serif;*/
- font-family: 'Didact Gothic', sans-serif;
- font-weight: 200;
-  font-size: 75px;
+ 	font-family: 'Didact Gothic', sans-serif;
+ 	font-weight: 200;
+  	font-size: 75px;
   /*color: #00059C;*/
-  color:#19B5FE;
-  opacity: .9;
+  	color:#19B5FE;
+  	opacity: .9;
  }
 
 
@@ -204,6 +204,10 @@ hr { display: block; height: 0px; border:0; border-top: 2px solid #19B5FE;
 	/*background-color:#fff*/;
 	}	
 
+.contact{
+	font-size:20px;
+}
+
 
 
 
@@ -274,6 +278,15 @@ hr { display: block; height: 0px; border:0; border-top: 2px solid #19B5FE;
 	color:#fff;
 }
 
+.active {
+	font-size:20px;
+	border: 2px solid #19B5FE;
+	color: #19B5FE;
+}
+
+#outbtn {
+
+}
 
 .inc_invite :hover{
 	/*background-color: blue;*/
