--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,7 +1,8 @@
+<div class="centered">
 <h1> Your contact <%@user.name%></h1>
 <label>Username: </label><%= @user.username %><br>
 <label>Name: </label><%= @user.name %><br>
 <label>Phone: </label><%= @user.phone %><br>
 <label>Email: </label><%= @user.email %><br>
 <label>Bio: </label><%= @user.bio %>
-
+</div>
