--- a/app/views/invites/contacts.html.erb
+++ b/app/views/invites/contacts.html.erb
@@ -1,3 +1,5 @@
+<element id="hide_navbar"></element>
+
 <h1> Your Contacts </h1>
 
 <% if current_user.users.empty? %>
@@ -7,7 +9,7 @@
 <% else %>
 
   <%= form_for @invite, url: select_contacts_path do |x| %> 
-    <% current_user.users.each do |a| %>
+    <% @confirmed_users.each do |a| %>
       <%= check_box("contacts", "add", { :multiple => true}, a.id, nil) %>
       <%= label_tag a.name %><br>
   <% end %> 
